--- a/EF_network_analysis.qmd
+++ b/EF_network_analysis.qmd
@@ -91,6 +91,119 @@ library(png)
 library(emmeans)
 ```
 
+```{r load data}
+#| cache: false
+
+#load data
+
+aus_data <- read_sav("~/Library/CloudStorage/GoogleDrive-foreilly@stanford.edu/My Drive/EF_network analysis/DECRA Master Dataset (T1-T3) 2020-10-16 (1).sav")
+colnames(aus_data)
+View(aus_data)
+```
+
+```{r explore data}
+#| cache: false
+
+ef_vars <- c(
+  "MrAnt_Pt_T1","GNG_IC_T1","CS_SwAcc_T1",
+  "MrAnt_Pt_T2","GNG_IC_T2","CS_SwAcc_T2",
+  "MrAnt_Pt_T3","GNG_IC_T3","CS_SwAcc_T3"
+)
+
+# EF t1 vars
+ggplot(aus_data, aes(x = Age, y = MrAnt_Pt_T1)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+ggplot(aus_data, aes(x = Age, y = GNG_IC_T1)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+ggplot(aus_data, aes(x = Age, y = CS_SwAcc_T1)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+# EF t2 vars
+ggplot(aus_data, aes(x = Age, y = MrAnt_Pt_T2)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+ggplot(aus_data, aes(x = Age, y = GNG_IC_T2)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+ggplot(aus_data, aes(x = Age, y = CS_SwAcc_T2)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+# EF t3 vars
+ggplot(aus_data, aes(x = Age, y = MrAnt_Pt_T3)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+ggplot(aus_data, aes(x = Age, y = GNG_IC_T3)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+ggplot(aus_data, aes(x = Age, y = CS_SwAcc_T3)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = TRUE)
+
+# missingness
+miss_var <- aus_data |>
+  summarise(across(all_of(ef_vars),
+                   list(n_miss = ~sum(is.na(.)),
+                        pct_miss = ~mean(is.na(.))*100,
+                        n_nonmiss = ~sum(!is.na(.))),
+                   .names = "{.col}__{.fn}")) |>
+  pivot_longer(everything(),
+               names_to = c("variable","metric"),
+               names_sep = "__",
+               values_to = "value") |>
+  pivot_wider(names_from = metric, values_from = value) |>
+  arrange(desc(pct_miss))
+
+miss_var
+
+```
+
 ```{r}
 
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
